IGNITE-15393 Add errorprone plugin (#304)